# QPALM

./: CMakeLists.txt
include/: qpalm.h
src/: newton.c  qpalm.c  termination.c
